add: job feature
